Bump project version to 4.0.0-SNAPSHOT, bump src/bin level to 11, drop MR jars, drop dependency on xmlresolver
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>